# Zcode

./: .hgignore  AppController.h  AppController.m  GAFContainer.h  GAFContainer.m  GNUmakefile  GNUmakefile.preamble  GNUmakefile.preamble.in  HACKING  ImageAndTextCell.m  NSDictionary+SmartUnpack.h  NSDictionary+SmartUnpack.m  PBXFileReference+ViewRelated.h  PBXFileReference+ViewRelated.m  PBXFileReference.h  PBXFileReference.m  PBXGroup+ViewRelated.h  PBXGroup+ViewRelated.m  PBXGroup.h  PBXGroup.m  PBXNativeTarget+ViewRelated.h  PBXNativeTarget+ViewRelated.m  PBXProject.h  PBXProject.m  PBXVariantGroup.h  PBXVariantGroup.m  ProjectDetailListDataSource.h  ProjectDetailListDataSource.m  ProjectDocument.h  ProjectDocument.m  XCConfigurationList+ViewRelated.h  XCConfigurationList+ViewRelated.m  ZCEditorViewController.h  ZCEditorViewController.m  ZCPBXBuildPhaseList+ViewRelated.h  ZCPBXBuildPhaseList+ViewRelated.m  ZCPBXTargetList+ViewRelated.h  ZCTextEditorViewController.h  ZCTextEditorViewController.m  Zcode-Info-gnustep.plist  (+9 more)
Builder/: PBXCompilerSpecification.h  PBXCompilerSpecification.m  PBXCompilerSpecificationGcc.h  PBXCompilerSpecificationGcc.m  XCCompilerSpecification.h  XCCompilerSpecification.m  XCLinkerSpecification.h  XCLinkerSpecification.m  XCProductTypeSpecification.h  XCProductTypeSpecification.m  XCSpecification.h  XCSpecification.m
IDE/: AppController.h  AppController.m  GAFContainer.h  GAFContainer.m  ImageAndTextCell.m  PBXFileReference+ViewRelated.h  PBXFileReference+ViewRelated.m  PBXGroup+ViewRelated.h  PBXGroup+ViewRelated.m  PBXNativeTarget+ViewRelated.h  PBXNativeTarget+ViewRelated.m  ProjectDetailListDataSource.h  ProjectDetailListDataSource.m  ProjectDocument.h  ProjectDocument.m  XCConfigurationList+ViewRelated.h  XCConfigurationList+ViewRelated.m  ZCEditorViewController.h  ZCEditorViewController.m  ZCInspectorViewController.h  ZCInspectorViewController.m  ZCPBXShellScriptBuildPhaseInspectorViewController.h  ZCPBXShellScriptBuildPhaseInspectorViewController.m  ZCPBXTargetList+ViewRelated.h  ZCPBXTargetList+ViewRelated.m  ZCTextEditorViewController.h  ZCTextEditorViewController.m  Zcode_main.m
PBXProjLib/: PBXBuildFile.h  PBXBuildFile.m  PBXBuildPhase.h  PBXBuildPhase.m  PBXBuildSettingsDictionary.h  PBXBuildSettingsDictionary.m  PBXFileReference.h  PBXFileReference.m  PBXGroup.h  PBXGroup.m  PBXNativeTarget.h  PBXNativeTarget.m  PBXPathedItem.h  PBXProject.h  PBXProject.m  PBXProjectReader.h  PBXProjectReader.m  PBXShellScriptBuildPhase.h  PBXShellScriptBuildPhase.m  PBXTarget.h  PBXTarget.m  PBXVariantGroup.h  PBXVariantGroup.m  XCBuildConfiguration.h  XCBuildConfiguration.m  XCConfigurationList.h  XCConfigurationList.m  ZCPBXBuildPhaseList.h  ZCPBXBuildPhaseList.m  ZCPBXProjectReader.h  ZCPBXProjectReader.m  ZCPBXTargetList.h  ZCPBXTargetList.m  ZCPathedItem.h  ZCPathedItem.m
Plugins/: XCPluginManager.h  XCPluginManager.m
Plugins/ProductTypes/: Application.xcspec  Bundle.xcspec  GNUmakefile  PBXApplicationProductType.h  PBXApplicationProductType.m  PBXBundleProductType.h  PBXBundleProductType.m
Resources/: Credits.rtf  ProjectDocument.xib  ZCEditorViewController.xib  ZCInspectorViewController.xib  ZCPBXShellScriptBuildPhaseInspectorViewController.xib  ZCTextEditorViewController.xib  Zcode.xib  apple-green.icns  resource-origin.txt
Resources/ProjectDocument.gorm/: data.classes  data.info  objects.gorm
Resources/ZCEditorViewController.gorm/: data.classes  objects.gorm
Resources/ZCInspectorViewController.gorm/: data.classes  objects.gorm
Resources/ZCPBXShellScriptBuildPhaseInspectorViewController.gorm/: data.classes  objects.gorm
Resources/ZCTextEditorViewController.gorm/: data.classes  objects.gorm
Resources/Zcode.gorm/: data.classes  objects.gorm
Zcode.pcproj/: PC.project
Zcode.xcodeproj/: project.pbxproj
check/: GNUmakefile  GNUmakefile.preamble  GNUmakefile.preamble.in  check.h  check_PBXBuildSettingsDictionary.m  check_PBXProjectReader.m  check_ProjectReader.m  check_ZCPBXProjectReader.m  main.m  no_objects.pbxproj  objects_not_dictionary.pbxproj  version97.pbxproj
gnustep_more/: NSViewController.m
support/: hudson.sh
zcbuild/: GNUmakefile  GNUmakefile.preamble.in  zcbuild.m
